--- a/MediBook.Web/Views/Patient/Index.cshtml
+++ b/MediBook.Web/Views/Patient/Index.cshtml
@@ -12,12 +12,12 @@
 </nav>
 
 <div class="row mb-4">
-    <div class="col">
+    <div class="col-4">
         <a class="btn table-blue-border" asp-controller="Patient" asp-action="Register">
             <i class="fas fa-plus-circle fa-lg"></i> Register a Patient
         </a>
     </div>
-    <div class="col">
+    <div class="col-4">
         <a class="btn table-blue-border" asp-controller="Patient" asp-action="Search">
             <i class="fas fa-search fa-lg"></i> Find a Patient
         </a>
