--- a/MediBook.Web/Views/_ViewImports.cshtml
+++ b/MediBook.Web/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using MediBook.Core.DTOs
 @using MediBook.Web.Helpers
 @using MediBook.Core.Enums
+@addTagHelper *, MediBook.Web
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
