--- a/MediBook.Web/Views/UserAdmin/CreateUser.cshtml
+++ b/MediBook.Web/Views/UserAdmin/CreateUser.cshtml
@@ -2,7 +2,6 @@
     ViewData["Title"] = "Create User";
 }
 
-@using MediBook.Web.Helpers
 @model UserForRegistrationDto
 <!--Breadcrumb navigation-->
 <nav aria-label="breadcrumb">
@@ -69,7 +68,7 @@
                     <span asp-validation-for="State" class="text-danger"></span>
                 </div>
                 <div class="form-group mt-4">
-                    <input type="submit" value="Register" class="btn btn-green-add" />
+                    <input type="submit" value="Register" class="btn table-blue-border" />
                     <a class="btn btn-grey-cancel" asp-controller="UserAdmin" asp-action="Index">Cancel</a>
                 </div>
             </form>
