Appointment Booking views complete

--- a/MediBook.Web/Views/_ViewImports.cshtml
+++ b/MediBook.Web/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using MediBook.Core.DTOs
 @using MediBook.Web.Helpers
 @using MediBook.Core.Enums
+@using MediBook.Services.AppointmentBook
 @addTagHelper *, MediBook.Web
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
