--- a/MediBook.Web/Views/AppointmentBook/CreateSession.cshtml
+++ b/MediBook.Web/Views/AppointmentBook/CreateSession.cshtml
@@ -26,12 +26,22 @@
                     <label class="col-form-label" for="Date">Date</label>
                     <input asp-for="Date" class="form-control" id="Date" name="Date" placeholder="DD/MM/YYY" type="date" />
                     <span asp-validation-for="Date" class="text-danger"></span>
+                    <small>Surgery opening hours are 8am to 6pm</small>
                 </div>
-                <div class="md-form">
+                @*<div class="md-form">
                     <label class="col-form-label" for="StartTime">StartTime</label>
-                    <input asp-for="StartTime" class="form-control" id="StartTime" name="Date" value="08:00" type="time" min="08:00" max="18:00" />
+                    <input asp-for="StartTime" class="form-control" id="StartTime" name="StartTime" type="time" asp-format="{0:HH:mm}" />
+                    <input type="text" value="9/23/2009" style="width: 100px;" readonly="readonly" name="Date" id="Date" class="hasDatepicker" />
                     <span asp-validation-for="StartTime" class="text-danger"></span>
                     <small>Surgery opening hours are 8am to 6pm</small>
+                </div>*@
+                <div class="md-form">
+                    <div class='input-group date' id='datetimepicker1'>
+                        <input asp-for="StartTime" type='text' class="form-control" />
+                        <span class="input-group-addon">
+                            <span class="glyphicon glyphicon-calendar"></span>
+                        </span>
+                    </div>
                 </div>
                 <div class="md-form">
                     <label for="DurationInMins" class="col-form-label">Duration In Mins</label>
@@ -60,6 +70,8 @@
             $('.mdb-select').materialSelect();
         });
     </script>
+    
+
 }
 @section Head
 {
