Appointment booking and cancellation working

--- a/MediBook.Web/Views/AppointmentBook/BookAppointment.cshtml
+++ b/MediBook.Web/Views/AppointmentBook/BookAppointment.cshtml
@@ -36,9 +36,9 @@
                                                 <div class="form-group mt-4">
                                                     <form asp-action="BookAppointment">
                                                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                                        <input asp-for="MedicalPractitionerId" type="hidden" class="form-control" name="Date" value="@Model.MedicalPractitionerId" />
-                                                        <input asp-for="PatientId" type="hidden" class="form-control" name="Date" value="@Model.PatientId" />
-                                                        <input asp-for="SlotId" type="hidden" class="form-control" name="Date" value="@slot.Id" />
+                                                        <input asp-for="MedicalPractitionerId" type="hidden" class="form-control" value="@session?.MedicalPractitioner?.Id" />
+                                                        <input asp-for="PatientId" type="hidden" class="form-control" value="@Model.PatientId" />
+                                                        <input asp-for="SlotId" type="hidden" class="form-control" value="@slot.Id" />
                                                         <div class="form-group mt-4">
                                                             <input type="submit" value="Book Appointment" class="btn btn-blue-grey" />
                                                         </div>
