--- a/MediBook.Web/Views/AppointmentBook/Index.cshtml
+++ b/MediBook.Web/Views/AppointmentBook/Index.cshtml
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="row mb-4">
-        <h4>Showing sessions from:<strong> @Model.Date</strong></h4>
+        <h4>Showing sessions from:<strong> @Model.Date.ToString("HH:mm")</strong></h4>
     </div>
     <div class="row mb-4">
         <div class="col-2">
