--- a/MediBook.Web/Views/Patient/Index.cshtml
+++ b/MediBook.Web/Views/Patient/Index.cshtml
@@ -12,7 +12,7 @@
 </nav>
 
 <div class="row mb-4">
-    <div class="col-4">
+    <div asp-roles="PracticeAdmin,Reception" class="col-4">
         <a class="btn table-blue-border" asp-controller="Patient" asp-action="Register">
             <i class="fas fa-plus-circle fa-lg"></i> Register a Patient
         </a>
