--- a/MediBook.Web/Views/Shared/_Layout.cshtml
+++ b/MediBook.Web/Views/Shared/_Layout.cshtml
@@ -50,16 +50,16 @@
                                     <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index"><i class="fas fa-home fa-lg" title="Home"></i>Home</a>
                                 </li>
                                 <li class="nav-item ml-2">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="UserAdmin" asp-action="Index"><i class="fas fa-users-cog fa-lg" title="User Admin"></i>User Administration</a>
+                                    <a class="nav-link text-white" asp-area="" asp-roles="PracticeAdmin" asp-controller="UserAdmin" asp-action="Index"><i class="fas fa-users-cog fa-lg" title="User Admin"></i>User Administration</a>
                                 </li>
                                 <li class="nav-item ml-2">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Patient" asp-action="Index"><i class="far fa-user-circle fa-lg" title="Patients"></i>Patients</a>
+                                    <a class="nav-link text-white" asp-area="" asp-roles="PracticeAdmin,Reception,MedicalPractitioner" asp-controller="Patient" asp-action="Index"><i class="far fa-user-circle fa-lg" title="Patients"></i>Patients</a>
                                 </li>
                                 <li class="nav-item ml-2">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="AppointmentBook" asp-action="Index"><i class="far fa-calendar fa-lg" title="Appointments"></i>Appointment Book</a>
+                                    <a class="nav-link text-white" asp-area="" asp-roles="PracticeAdmin,Reception,MedicalPractitioner" asp-controller="AppointmentBook" asp-action="Index"><i class="far fa-calendar fa-lg" title="Appointments"></i>Appointment Book</a>
                                 </li>
                                 <li class="nav-item ml-2">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Auth" asp-action="Logout"><i class="fas fa-sign-out-alt fa-lg" title="Logout"></i>Logout</a>
+                                    <a class="nav-link text-white" asp-area="" asp-roles="PracticeAdmin,Reception,MedicalPractitioner" asp-controller="Auth" asp-action="Logout"><i class="fas fa-sign-out-alt fa-lg" title="Logout"></i>Logout</a>
                                 </li>
                             </ul>
                         </div>
