--- a/MediBook.Web/Views/Patient/Details.cshtml
+++ b/MediBook.Web/Views/Patient/Details.cshtml
@@ -66,7 +66,7 @@
             </div>
             <div class="row">
                 <div class="col-4"><strong>PostCode: </strong></div>
-                <div class="col-8">@Model.City</div>
+                <div class="col-8">@Model.PostCode</div>
             </div>
             <div class="row">
                 <div class="col-4"><strong>Phone: </strong></div>
