--- a/MediBook.Web/Views/PatientRecord/Index.cshtml
+++ b/MediBook.Web/Views/PatientRecord/Index.cshtml
@@ -39,11 +39,16 @@
 <div class="container-fluid">
     <ul class="nav md-pills nav-justified table-blue-border">
         <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#patientNotes">Patient Notes</a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#patientAppointments">Patient Appointments</a></li>
     </ul>
 </div>
 <div class="tab-content">
     <div id="patientNotes" class="tab-pane active">
         <!-- Patient Notes -->
         <partial name="_PatientNotes" />
+    </div>
+    <div id="patientAppointments" class="tab-pane">
+        <!-- Patient Notes -->
+        <partial name="_PatientAppointments" />
     </div>
 </div>
