--- a/MediBook.Web/Views/Shared/_Layout.cshtml
+++ b/MediBook.Web/Views/Shared/_Layout.cshtml
@@ -59,7 +59,10 @@
                                     <a class="nav-link text-white" asp-area="" asp-roles="PracticeAdmin,Reception,MedicalPractitioner" asp-controller="AppointmentBook" asp-action="Index"><i class="far fa-calendar fa-lg" title="Appointments"></i>Appointment Book</a>
                                 </li>
                                 <li class="nav-item ml-2">
-                                    <a class="nav-link text-white" asp-area="" asp-roles="PracticeAdmin,Reception,MedicalPractitioner" asp-controller="Auth" asp-action="Logout"><i class="fas fa-sign-out-alt fa-lg" title="Logout"></i>Logout</a>
+                                    <a class="nav-link text-white" asp-area="" asp-roles="Patient" asp-controller="PatientRecord" asp-action="Index"><i class="far fa-calendar fa-lg" title="Appointments"></i>Patient Appointments</a>
+                                </li>
+                                <li class="nav-item ml-2">
+                                    <a class="nav-link text-white" asp-area="" asp-roles="PracticeAdmin,Reception,MedicalPractitioner,Patient" asp-controller="Auth" asp-action="Logout"><i class="fas fa-sign-out-alt fa-lg" title="Logout"></i>Logout</a>
                                 </li>
                             </ul>
                         </div>
@@ -92,10 +95,9 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             <div class="row">
-                <div class="col-4"></div>
                 <div class="float-left">&copy; 2021 - MediBook.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></div>
             </div>
-            <div class="col-7">
+            <div>
                 @if (User?.Identity == null || User.Identity.IsAuthenticated)
                 {
                     <div class="float-right">Logged in User: @TempData["username"]</div>
